changed report date format

--- a/Python/jupyter_reports/StatsReport_2021_07_10.html
+++ b/Python/jupyter_reports/StatsReport_2021_07_10.html
@@ -13997,48 +13997,48 @@ Website: <a href="https://andrewpwheeler.com/">andrewpwheeler.com</a></p>
 
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output " data-mime-type="text/html">
 <style  type="text/css" >
-    #T_e9ec5_ caption {
+    #T_5359e_ caption {
           color: k;
           font-size: 18pt;
           font-weight: bold;
           text-align: center;
-    }    #T_e9ec5_ th {
+    }    #T_5359e_ th {
           color: k;
           font-size: 14pt;
           font-style: italic;
           text-align: right;
-    }#T_e9ec5_row0_col0,#T_e9ec5_row0_col1,#T_e9ec5_row0_col2,#T_e9ec5_row1_col0,#T_e9ec5_row1_col1,#T_e9ec5_row1_col2,#T_e9ec5_row2_col0,#T_e9ec5_row2_col1,#T_e9ec5_row2_col2,#T_e9ec5_row3_col0,#T_e9ec5_row3_col1,#T_e9ec5_row3_col2,#T_e9ec5_row4_col0,#T_e9ec5_row4_col1,#T_e9ec5_row4_col2,#T_e9ec5_row5_col0,#T_e9ec5_row5_col1,#T_e9ec5_row5_col2{
+    }#T_5359e_row0_col0,#T_5359e_row0_col1,#T_5359e_row0_col2,#T_5359e_row1_col0,#T_5359e_row1_col1,#T_5359e_row1_col2,#T_5359e_row2_col0,#T_5359e_row2_col1,#T_5359e_row2_col2,#T_5359e_row3_col0,#T_5359e_row3_col1,#T_5359e_row3_col2,#T_5359e_row4_col0,#T_5359e_row4_col1,#T_5359e_row4_col2,#T_5359e_row5_col0,#T_5359e_row5_col1,#T_5359e_row5_col2{
             font-size:  12pt;
-        }</style><table id="T_e9ec5_" style='display:inline'><caption>YTD NIBRS as of  2021-07-10</caption><thead>    <tr>        <th class="col_heading level0 col0" >NIBRS</th>        <th class="col_heading level0 col1" >2020</th>        <th class="col_heading level0 col2" >2021</th>    </tr></thead><tbody>
+        }</style><table id="T_5359e_" style='display:inline'><caption>YTD NIBRS as of  2021-07-10</caption><thead>    <tr>        <th class="col_heading level0 col0" >NIBRS</th>        <th class="col_heading level0 col1" >2020</th>        <th class="col_heading level0 col2" >2021</th>    </tr></thead><tbody>
                 <tr>
-                                <td id="T_e9ec5_row0_col0" class="data row0 col0" >AGG ASSAULT - NFV</td>
-                        <td id="T_e9ec5_row0_col1" class="data row0 col1" >1,834</td>
-                        <td id="T_e9ec5_row0_col2" class="data row0 col2" >1,887</td>
+                                <td id="T_5359e_row0_col0" class="data row0 col0" >AGG ASSAULT - NFV</td>
+                        <td id="T_5359e_row0_col1" class="data row0 col1" >1,834</td>
+                        <td id="T_5359e_row0_col2" class="data row0 col2" >1,887</td>
             </tr>
             <tr>
-                                <td id="T_e9ec5_row1_col0" class="data row1 col0" >BURGLARY-BUSINESS</td>
-                        <td id="T_e9ec5_row1_col1" class="data row1 col1" >2,420</td>
-                        <td id="T_e9ec5_row1_col2" class="data row1 col2" >1,914</td>
+                                <td id="T_5359e_row1_col0" class="data row1 col0" >BURGLARY-BUSINESS</td>
+                        <td id="T_5359e_row1_col1" class="data row1 col1" >2,420</td>
+                        <td id="T_5359e_row1_col2" class="data row1 col2" >1,914</td>
             </tr>
             <tr>
-                                <td id="T_e9ec5_row2_col0" class="data row2 col0" >ROBBERY-BUSINESS</td>
-                        <td id="T_e9ec5_row2_col1" class="data row2 col1" >627</td>
-                        <td id="T_e9ec5_row2_col2" class="data row2 col2" >419</td>
+                                <td id="T_5359e_row2_col0" class="data row2 col0" >ROBBERY-BUSINESS</td>
+                        <td id="T_5359e_row2_col1" class="data row2 col1" >627</td>
+                        <td id="T_5359e_row2_col2" class="data row2 col2" >419</td>
             </tr>
             <tr>
-                                <td id="T_e9ec5_row3_col0" class="data row3 col0" >ROBBERY-INDIVIDUAL</td>
-                        <td id="T_e9ec5_row3_col1" class="data row3 col1" >1,202</td>
-                        <td id="T_e9ec5_row3_col2" class="data row3 col2" >887</td>
+                                <td id="T_5359e_row3_col0" class="data row3 col0" >ROBBERY-INDIVIDUAL</td>
+                        <td id="T_5359e_row3_col1" class="data row3 col1" >1,202</td>
+                        <td id="T_5359e_row3_col2" class="data row3 col2" >887</td>
             </tr>
             <tr>
-                                <td id="T_e9ec5_row4_col0" class="data row4 col0" >THEFT FROM MOTOR VEHICLE</td>
-                        <td id="T_e9ec5_row4_col1" class="data row4 col1" >6,248</td>
-                        <td id="T_e9ec5_row4_col2" class="data row4 col2" >6,480</td>
+                                <td id="T_5359e_row4_col0" class="data row4 col0" >THEFT FROM MOTOR VEHICLE</td>
+                        <td id="T_5359e_row4_col1" class="data row4 col1" >6,248</td>
+                        <td id="T_5359e_row4_col2" class="data row4 col2" >6,480</td>
             </tr>
             <tr>
-                                <td id="T_e9ec5_row5_col0" class="data row5 col0" >WEAPON LAW VIOLATIONS</td>
-                        <td id="T_e9ec5_row5_col1" class="data row5 col1" >707</td>
-                        <td id="T_e9ec5_row5_col2" class="data row5 col2" >1,042</td>
+                                <td id="T_5359e_row5_col0" class="data row5 col0" >WEAPON LAW VIOLATIONS</td>
+                        <td id="T_5359e_row5_col1" class="data row5 col1" >707</td>
+                        <td id="T_5359e_row5_col2" class="data row5 col2" >1,042</td>
             </tr>
     </tbody></table>
 </div>
